Fix dobule constructor warnings